set (AWS_COMMAND_CPP ${PROJECT_SOURCE_DIR}/src/aws_command.cpp)
set(PROTOS ${PROJECT_SOURCE_DIR}/proto/command.proto)
set(PROTO_SRC_DIR ${PROJECT_SOURCE_DIR}/proto/src)
file(MAKE_DIRECTORY ${PROTO_SRC_DIR})
include_directories(PUBLIC ${PROTO_SRC_DIR})

protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${PROTO_SRC_DIR} ${PROTOS})
grpc_generate_cpp(GRPC_SRCS GRPC_HDRS ${PROTO_SRC_DIR} ${PROTOS})

add_executable(filter filter.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS filter DESTINATION bin)
add_executable(channel channel.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS channel DESTINATION bin)
add_executable(frm frm.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS frm DESTINATION bin)
add_executable(chrm chrm.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS chrm DESTINATION bin)
add_executable(clear clear.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS clear DESTINATION bin)

add_executable(fset fset.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS fset DESTINATION bin)
add_executable(fget fget.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS fget DESTINATION bin)
add_executable(fpar fpar.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS fpar DESTINATION bin)
add_executable(finf finf.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS finf DESTINATION bin)
add_executable(chinf chinf.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS chinf DESTINATION bin)

add_executable(awstime awstime.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS awstime DESTINATION bin)
add_executable(awscd awscd.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS awscd DESTINATION bin)

add_executable(go go.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS go DESTINATION bin)
add_executable(step step.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS step DESTINATION bin)
add_executable(pause pause.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS pause DESTINATION bin)
add_executable(stop stop.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS stop DESTINATION bin)
add_executable(quit quit.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS quit DESTINATION bin)

add_executable(trat trat.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS trat DESTINATION bin)
add_executable(cyc cyc.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS cyc DESTINATION bin)

add_executable(fls fls.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS fls DESTINATION bin)
add_executable(chls chls.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS chls DESTINATION bin)
add_executable(fpls fpls.cpp aws_cmd.cpp ${AWS_COMMAND_CPP})
install(TARGETS fpls DESTINATION bin)

add_executable(caws caws.cpp ${PROTO_SRCS} ${GRPC_SRCS})
target_link_libraries(caws flatbuffers::libflatbuffers gRPC::grpc++_reflection protobuf::libprotobuf)
install(TARGETS caws DESTINATION bin)

